FileNotFoundException, started goxel importer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,6 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(OpenGL REQUIRED)
 find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
 find_package(GLEW REQUIRED)
-add_executable(oglPlayground main.cpp fileUtils.cpp fileUtils.hpp ShaderProgram.cpp ShaderProgram.hpp InvalidStateException.cpp InvalidStateException.hpp)
+add_executable(oglPlayground main.cpp fileUtils.cpp fileUtils.hpp ShaderProgram.cpp ShaderProgram.hpp InvalidStateException.hpp GoxelObject.cpp GoxelObject.hpp FileNotFoundException.hpp)
 target_compile_options(oglPlayground PRIVATE -Wall -Wextra -pedantic -Werror)
 target_link_libraries(oglPlayground sfml-graphics sfml-audio ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES})
